<resources>
    <string name="app_name">RetrofitRxJava3</string>
    <string name="add_task">Add Task</string>
    <string name="text_title">Title:</string>
    <string name="text_body">Body:</string>
    <string name="text_note">Note:</string>
    <string name="acton_add_button">Add Action Button</string>
    <string name="acton_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="text_status">Status:</string>
    <string name="title_delete">Delete?</string>
    <string name="delete_message">Do you want to delete task?</string>
    <string name="action_delete">Delete</string>
    <string name="action_search">Search</string>
    <string name="action_filter_off">Filter Off</string>
</resources>